Day-39-Persistent-Storage/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: "mongodb-internal" 
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:6.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
        - name: mongo-init-volume
          mountPath: /docker-entrypoint-initdb.d/init.js
          subPath: init.js
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-data-claim
      - name: mongo-init-volume
        configMap:
          name: mongo-init-script
