Day-39-Persistent-Storage/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-internal
spec:
  clusterIP: None 
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
